--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Scratch bij UGent</h1>
+    <h2><a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">Deel 1 project bestand (sb3)</a></h2>
     <h2><a href="debugger/index.html" target="_blank" rel="noopener noreferrer">Deel 1</a></h2>
+    <h2><a href="testing/doolhof-tests-start.sb3" target="_blank" rel="noopener noreferrer">Deel 2 project bestand (sb3)</a></h2>
     <h2><a href="testing/index.html" target="_blank" rel="noopener noreferrer">Deel 2</a></h2>
     <h2><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Evaluatie</a></h2>
 </body>
