add style and some links

--- a/index.html
+++ b/index.html
@@ -2,15 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Scratch at UGent</title>
+	<title>Scratch uitbreiden</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-    <h1>Scratch bij UGent</h1>
-    <h2><a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">Deel 1 project bestand (sb3)</a></h2>
-    <h2><a href="debugger/index.html" target="_blank" rel="noopener noreferrer">Deel 1</a></h2>
-    <h2><a href="testing/doolhof-tests-start.sb3" target="_blank" rel="noopener noreferrer">Deel 2 project bestand (sb3)</a></h2>
-    <h2><a href="testing/index.html" target="_blank" rel="noopener noreferrer">Deel 2</a></h2>
-    <h2><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Evaluatie</a></h2>
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <h1 onclick="alert('Paasei')" class="title">
+                        Scratch uitbreiden
+                    </h1>
+                    <div class="m-4">
+                        <p class="subtitle">
+                            Deel 1
+                        </p>
+                        <div>
+                            <div class="row"><a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">Project bestand (sb3)</a></div>
+                            <div class="row"><a href="debugger/index.html" target="_blank" rel="noopener noreferrer">Scratch omgeving</a></div>
+                            <div class="row"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
+                        </div>
+                    </div>
+                    <div class="m-4">
+                        <p class="subtitle">
+                            Deel 2
+                        </p>
+                        <div>
+                            <div class="row"><a href="testing/doolhof-tests-start.sb3" target="_blank" rel="noopener noreferrer">Project bestand (sb3)</a></div>
+                            <div class="row"><a href="testing/index.html" target="_blank" rel="noopener noreferrer">Scratch omgeving</a></div>
+                            <div class="row"><a href="https://forms.gle/X13YxdtUR4bTQUxw9" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
