voeg evaluatie link deel 1 toe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 Klik <a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">hier</a> om het projectbestand (sb3) te donwloaden.
                             </p>
                             <div class="row"><a href="debugger/index.html" target="_blank" rel="noopener noreferrer">Scratch omgeving</a></div>
-                            <div class="row"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
+                            <div class="row"><a href="https://forms.gle/18TH3CGSwdbENgAn7" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
                         </div>
                     </div>
                     <div class="m-4">
