--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         </p>
                         <div>
                             <p class="row mb-2">
-                                Klik <a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">hier</a> om het projectbestand (sb3) te donwloaden.
+                                Klik <a href="debugger/doolhof-debugger-start.sb3" target="_blank" rel="noopener noreferrer">hier</a> om het projectbestand (sb3) te downloaden.
                             </p>
                             <div class="row"><a href="debugger/index.html" target="_blank" rel="noopener noreferrer">Scratch omgeving</a></div>
                             <div class="row"><a href="https://forms.gle/18TH3CGSwdbENgAn7" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
@@ -32,7 +32,7 @@
                         </p>
                         <div>
                             <p class="row mb-2">
-                                Klik <a href="testing/doolhof-tests-start.sb3" target="_blank" rel="noopener noreferrer">hier</a> om het projectbestand (sb3) te donwloaden.
+                                Klik <a href="testing/doolhof-tests-start.sb3" target="_blank" rel="noopener noreferrer">hier</a> om het projectbestand (sb3) te downloaden.
                             </p>
                             <div class="row"><a href="testing/index.html" target="_blank" rel="noopener noreferrer">Scratch omgeving</a></div>
                             <div class="row"><a href="https://forms.gle/X13YxdtUR4bTQUxw9" target="_blank" rel="noopener noreferrer">Evaluatie</a></div>
